--- a/basic/package.json
+++ b/basic/package.json
@@ -6,6 +6,7 @@
     "prettier": "2.5.1"
   },
   "scripts": {
-    "build": "node main.mjs"
+    "optimise": "node optimise.mjs",
+    "resize": "node resize.mjs"
   }
 }
